--- a/src/app/notas/notas.component.html
+++ b/src/app/notas/notas.component.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li (click)="Inicio()"><i class="fa-solid fa-house"></i> INICIO</li>
                     <li class="active"(click)="Notas()"><i class="fa-solid fa-note-sticky"></i>NOTAS</li>
-                    <li><i class="fa-solid fa-tasks"></i> TAREAS</li>
+                    <li (click)="Tareas()"><i class="fa-solid fa-tasks"></i> TAREAS</li>
                     <li><i class="fa-solid fa-calendar-days"></i> CALENDARIO</li>
                 </ul>
             </nav>
